# Demi

./: CMakeLists.txt  LICENSE  debug.bat  readme.md  release.bat
resources/shaders/: gui_frag.glsl  gui_vert.glsl  text_frag.glsl  text_vert.glsl
src/: include.h  main.c  main_helper.c
src/core/: color_map.c  color_map.h  demifile.c  demifile.h  editor.c  editor.h  font.c  font.h  globjects.c  globjects.h  gui.c  gui.h  math.c  math.h  platform_layer.h  render.c  render.h  string.c  string.h
src/core/windows/: error.c  file.c  window.c
src/helper/: globjects.c  globjects.h  stringbuffer.c  stringbuffer.h
